# LearnOpenGL

./: CMakeLists.txt  README.md
app/src/: main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
math/include/: MathType.h
mathtool/include/: MathType.h
mathtool/src/: MathType.cpp
mesh/include/: Mesh.h
mesh/src/: Mesh.cpp
scene/include/: Material.h  Mesh.h  Model.h
scene/src/: Mesh.cpp  Model.cpp
shaders/include/: Shader.h
shaders/src/: Shader.cpp
shaders/vertexshaders/: simple.shader
